--- a/gradle.properties
+++ b/gradle.properties
@@ -41,8 +41,13 @@ flywheel_minecraft_version = 1.19.2
 create_version = 0.5.1.e-44
 flywheel_version = 0.6.10-20
 registrate_version = MC1.19-1.1.5
-jei_version=11.5.0.297
+jei_version=11.5.2.1007
 occultism_version=1.89.0
+geckolib_version=1.19:3.1.35
+smartbrainlib_version=1.9
+modonomicon_version=1.30.1
+curios_version=5.1.1.0
+almostunified_version=1.19.2-0.3.4
 
 ## Mod Properties
 
