fix: add missing variable

--- a/gradle.properties
+++ b/gradle.properties
@@ -48,6 +48,7 @@ smartbrainlib_version=1.9
 modonomicon_version=1.30.1
 curios_version=5.1.1.0
 almostunified_version=1.19.2-0.3.4
+theurgy_version=1.1.1
 
 ## Mod Properties
 
