--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,22 @@ jobs:
           fetch-tags: true
 
       - name: Setup JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
+          cache: 'gradle'
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+
+      - name: Run build with Gradle wrapper
+        run: ./gradlew build
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        if: always()
         with:
-          arguments: build
+          name: modjar
+          path: build/libs/*.jar
+
