feat: add JEI and remove useless skeleton details

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,9 @@ minecraft_version=1.19.2
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.19.2,1.20)
+
+occultism_version_range=[1.43.0,)
+create_version_range=[0.5.1.e-44,)
 # The Forge version must agree with the Minecraft version to get a valid artifact
 forge_version=43.3.8
 # The Forge version range can use any version of Forge as bounds or match the loader version range
@@ -56,7 +59,7 @@ theurgy_version=1.1.1
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=occultcreate
 # The human-readable display name for the mod.
-mod_name=Occult Creater
+mod_name=Occult Creations
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
@@ -68,4 +71,4 @@ mod_group_id=dev.katcodes.occultcreate
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=GaeaKat
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=Adds a few minor features to bridge the gap between Occultism and Create.
