--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -56,6 +56,18 @@ ordering="NONE"
 side="BOTH"
 # Here's another dependency
 [[dependencies.${mod_id}]]
+modId="occultism"
+mandatory=true
+versionRange="${occultism_version_range}"
+ordering="AFTER"
+side="BOTH"
+[[dependencies.${mod_id}]]
+modId="create"
+mandatory=true
+versionRange="${create_version_range}"
+ordering="AFTER"
+side="BOTH"
+[[dependencies.${mod_id}]]
 modId="minecraft"
 mandatory=true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
