--- a/gradle.properties
+++ b/gradle.properties
@@ -7,20 +7,20 @@ org.gradle.daemon=false
 ## Environment Properties
 
 # The Minecraft version must agree with the Forge version to get a valid artifact
-minecraft_version=1.19.2
+minecraft_version=1.20.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.19.2,1.20)
+minecraft_version_range=[1.20.1,1.21)
 
-occultism_version_range=[1.43.0,)
-create_version_range=[0.5.1.e-44,)
+occultism_version_range=[1.119.0,)
+create_version_range=[0.5.1.f,)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=43.3.8
+forge_version=1.20.1-47.1.3
 # The Forge version range can use any version of Forge as bounds or match the loader version range
-forge_version_range=[43,)
+forge_version_range=[47,)
 # The loader version range can only use the major version of Forge/FML as bounds
-loader_version_range=[43,)
+loader_version_range=[47,)
 # The mapping channel to use for mappings.
 # The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
 # Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
@@ -35,23 +35,37 @@ loader_version_range=[43,)
 #
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
-mapping_channel=official
-# The mapping version to query from the mapping channel.
-# This must match the format required by the mapping channel.
-mapping_version=1.19.2
-create_minecraft_version = 1.19.2
-flywheel_minecraft_version = 1.19.2
-create_version = 0.5.1.e-44
-flywheel_version = 0.6.10-20
-registrate_version = MC1.19-1.1.5
-jei_version=11.5.2.1007
-occultism_version=1.89.0
-geckolib_version=1.19:3.1.35
-smartbrainlib_version=1.9
-modonomicon_version=1.30.1
-curios_version=5.1.1.0
-almostunified_version=1.19.2-0.3.4
-theurgy_version=1.1.1
+mapping_channel=parchment
+#postfix is target mc version, optional prefix is source parchment mc version
+mapping_version=2023.06.26-1.20.1
+
+
+create_minecraft_version = 1.20.1
+flywheel_minecraft_version = 1.20.1
+create_version = 0.5.1.e-22
+flywheel_version = 0.6.10-7
+registrate_version = MC1.20-1.3.3
+occultism_version=1.119.0
+## Dependency Properties
+jei_version=15.2.0.23
+jei_version_range=[15.2.0.0,)
+curios_version=5.2.0-beta.3
+curios_version_range=[5.2.0-beta.1,)
+# geckolib currently names their files after 1.20
+geckolib_minecraft_version=1.20.1
+geckolib_version=4.4
+geckolib_version_range=[4.4,)
+# smartbrainlib currently names their files after 1.20
+smartbrainlib_minecraft_version=1.20
+smartbrainlib_version=1.11
+smartbrainlib_version_range=[1.11,)
+almost_unified_version=0.5.0
+almost_unified_version_range=[0.5.0,)
+modonomicon_version=1.60.0
+modonomicon_version_range=[1.60.0,)
+theurgy_version=1.17.1
+theurgy_version_range=[1.17.1,)
+per_viam_invenire_version_range=[0.1.57,)
 
 ## Mod Properties
 
